--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "watch": "^0.13.0"
   }
 }
